Added basic authentication

--- a/angularapp/src/app/nav-menu/nav-menu.component.html
+++ b/angularapp/src/app/nav-menu/nav-menu.component.html
@@ -1,4 +1,7 @@
 <mat-toolbar color="primary">
     <button mat-button class="home-button" [routerLink]="['/']">CoderView</button>
     <button mat-button [routerLink]="['/about']">About</button>
+    <span class="spacer"></span>
+    <button *ngIf="!isLoggedIn" mat-button [routerLink]="['/signin']">Sign In</button>
+    <button *ngIf="isLoggedIn" mat-button (click)="logout()">Sign Out</button>
 </mat-toolbar>
