--- a/angularapp/src/app/new-post/new-post.component.html
+++ b/angularapp/src/app/new-post/new-post.component.html
@@ -2,15 +2,15 @@
     <mat-card-content>
         <mat-form-field class="title">
             <mat-label>Title</mat-label>
-            <input matInput>
+            <input [(ngModel)]="title" matInput>
         </mat-form-field>
         <mat-form-field class="post">
             <mat-label>Post</mat-label>
-            <textarea matInput></textarea>
+            <textarea [(ngModel)]="content" matInput></textarea>
         </mat-form-field>
     </mat-card-content>
     <mat-card-actions align="end">
         <button mat-button [routerLink]="['/']">Cancel</button>
-        <button mat-button>Create Post</button>
+        <button mat-button (click)="createNewPost()">Create Post</button>
     </mat-card-actions>
 </mat-card>
