--- a/angularapp/src/app/posts/posts.component.html
+++ b/angularapp/src/app/posts/posts.component.html
@@ -1,7 +1,7 @@
 <h1>All Posts</h1>
 <button class="create-post-button" mat-raised-button [routerLink]="['/new_post']">Create a new post</button>
 <div>
-    <mat-card class="card" [routerLink]="['/post/{{post.id}}']" *ngFor="let post of posts">
+    <mat-card class="card" *ngFor="let post of posts" [routerLink]="['/post', post.id]">
         <mat-card-header>
             <mat-card-title>{{post.title}}</mat-card-title>
             <mat-card-subtitle>{{post.author}}</mat-card-subtitle>
@@ -11,7 +11,7 @@
         </mat-card-content>
         <mat-card-actions>
             <button mat-button>Comment ({{post.commentCount}})</button>
-            <button mat-button>Vote ({{post.voteCount}})</button>
+            <button mat-button [class.button-pressed]="post.isVotedByUser">Vote ({{post.voteCount}})</button>
         </mat-card-actions>
     </mat-card>
 </div>
