--- a/angularapp/src/app/app.component.css
+++ b/angularapp/src/app/app.component.css
@@ -1,5 +1,22 @@
+:host {
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+}
+
 main {
 	max-width: 1000px;
 	margin: auto;
 	padding: 10px;
+	box-sizing: border-box;
+	width: 100%;
+	flex-grow: 1;
+	display: flex;
+	flex-direction: column;
+}
+
+footer {
+	text-align: center;
+	padding: 20px;
+	background-color: #00000055;
 }
