--- a/angularapp/src/app/signin/signin.component.html
+++ b/angularapp/src/app/signin/signin.component.html
@@ -1,23 +1,22 @@
-<h1>Sign in</h1>
-<div class="error-message">
-    <div *ngIf="isLoginFailed">
-        Username or Password incorrect!
-    </div>
-</div>
-<form [formGroup]="loginForm"
-      (ngSubmit)="onSubmit()">
-    <p>
-        <mat-form-field class="example-full-width">
-            <mat-label>Username</mat-label>
-            <input type="text" formControlName="username" matInput>
-        </mat-form-field>
-    </p>
-    <p>
-        <mat-form-field class="example-full-width">
-            <mat-label>Password</mat-label>
-            <input type="password" formControlName="password" matInput>
-        </mat-form-field>
-    </p>
-    <button mat-button [routerLink]="['/signup']">Create an account</button>
-    <button mat-raised-button>Sign In</button>
-</form>
+<mat-card>
+    <mat-card-title><h1>Sign in</h1></mat-card-title>
+    <mat-card-content>
+        <mat-progress-bar color="accent" [style.visibility]="isLoading ? 'visible' : 'hidden'" mode="indeterminate"></mat-progress-bar>
+        <div class="error-message" [style.visibility]="(isLoginFailed && !isLoading) ? 'visible' : 'hidden'">
+            Username or Password incorrect!
+        </div>
+        <form [formGroup]="loginForm"
+              (ngSubmit)="onSubmit()">
+            <mat-form-field class="example-full-width">
+                <mat-label>Username</mat-label>
+                <input required type="text" formControlName="username" matInput>
+            </mat-form-field>
+            <mat-form-field class="example-full-width">
+                <mat-label>Password</mat-label>
+                <input required type="password" formControlName="password" matInput>
+            </mat-form-field>
+            <button type="button" mat-button [routerLink]="['/signup']">Create an account</button>
+            <button class="login-button" type="submit" [disabled]="!loginForm.valid" mat-raised-button>Sign In</button>
+        </form>
+    </mat-card-content>
+</mat-card>
