--- a/angularapp/src/app/signup/signup.component.css
+++ b/angularapp/src/app/signup/signup.component.css
@@ -1,3 +1,22 @@
+:host {
+	width: 100%;
+	display: block;
+	max-width: 500px;
+	margin: auto;
+}
+
+mat-form-field {
+	width: 100%;
+}
+
+mat-card {
+	padding: 20px;
+}
+
 .error-message {
 	color: red;
+}
+
+mat-card-title {
+	text-align: center;
 }
