--- a/angularapp/src/app/signup/signup.component.html
+++ b/angularapp/src/app/signup/signup.component.html
@@ -1,38 +1,43 @@
-<h1>Create an account</h1>
-<div *ngIf="showError" class="error-message">
-    <span [innerHTML]="errorMessage"></span>
-</div>
-<form [formGroup]="registerForm"
-      (ngSubmit)="onSubmit()">
-    <p>
-        <mat-form-field class="example-full-width">
-            <mat-label>Username</mat-label>
-            <input type="text" formControlName="username" matInput>
-        </mat-form-field>
-    </p>
-    <p>
-        <mat-form-field class="example-full-width">
-            <mat-label>Email</mat-label>
-            <input type="email" formControlName="email" matInput placeholder="Ex. pat@example.com">
-        </mat-form-field>
-    </p>
-    <p>
-        <mat-form-field class="example-full-width">
-            <mat-label>Password</mat-label>
-            <input type="password" formControlName="password" matInput>
-        </mat-form-field>
-    </p>
-    <p>
-        <mat-form-field class="example-full-width">
-            <mat-label>Repeat Password</mat-label>
-            <input type="password" formControlName="confirmPassword" matInput>
-            <mat-error *ngIf="validateControl('confirmPassword') && hasError('confirmPassword', 'required')">
-                Confirmation is required
-            </mat-error>
-            <mat-error *ngIf="hasError('confirmPassword', 'mustMatch')">
-                Passwords must match
-            </mat-error>
-        </mat-form-field>
-    </p>
-    <button mat-raised-button [disabled]="!registerForm.valid">Create an account</button>
-</form>
+<mat-card>
+    <mat-card-title><h1>Create an account</h1></mat-card-title>
+    <mat-card-content>
+        <mat-progress-bar color="accent" [style.visibility]="isLoading ? 'visible' : 'hidden'" mode="indeterminate"></mat-progress-bar>
+        <div class="error-message" [style.visibility]="(isLoginFailed && !isLoading) ? 'visible' : 'hidden'">
+            <span [innerHTML]="errorMessage"></span>
+        </div>
+        <form [formGroup]="registerForm"
+              (ngSubmit)="onSubmit()">
+            <p>
+                <mat-form-field class="example-full-width">
+                    <mat-label>Username</mat-label>
+                    <input type="text" formControlName="username" matInput>
+                </mat-form-field>
+            </p>
+            <p>
+                <mat-form-field class="example-full-width">
+                    <mat-label>Email</mat-label>
+                    <input type="email" formControlName="email" matInput placeholder="Ex. pat@example.com">
+                </mat-form-field>
+            </p>
+            <p>
+                <mat-form-field class="example-full-width">
+                    <mat-label>Password</mat-label>
+                    <input type="password" formControlName="password" matInput>
+                </mat-form-field>
+            </p>
+            <p>
+                <mat-form-field class="example-full-width">
+                    <mat-label>Repeat Password</mat-label>
+                    <input type="password" formControlName="confirmPassword" matInput>
+                    <mat-error *ngIf="validateControl('confirmPassword') && hasError('confirmPassword', 'required')">
+                        Confirmation is required
+                    </mat-error>
+                    <mat-error *ngIf="hasError('confirmPassword', 'mustMatch')">
+                        Passwords must match
+                    </mat-error>
+                </mat-form-field>
+            </p>
+            <button mat-raised-button [disabled]="!registerForm.valid">Create an account</button>
+        </form>
+    </mat-card-content>
+</mat-card>
