--- a/angularapp/src/app/post/post.component.html
+++ b/angularapp/src/app/post/post.component.html
@@ -3,9 +3,7 @@
         <mat-card-title>{{title}}</mat-card-title>
         <mat-card-subtitle class="user">{{author}}</mat-card-subtitle>
     </mat-card-header>
-    <mat-card-content>
-        <p>{{content}}</p>
-    </mat-card-content>
+    <mat-card-content>{{content}}</mat-card-content>
     <mat-card-actions>
         <button mat-button (click)="startReply(-1)">Comment ({{getCommentCount()}})</button>
         <button mat-button [class.button-pressed]="isVotedByUser" (click)="voteOnPost()">Vote ({{voteCount}})</button>
@@ -13,31 +11,43 @@
 </mat-card>
 <mat-card>
     <mat-card-content>
-        <mat-form-field class="comment" *ngIf="replies.hasOwnProperty(-1)">
-            <input type="text" [(ngModel)]="replies[-1]" matInput>
-            <button matSuffix mat-button (click)="cancelReply(-1)">Cancel</button>
-            <button matSuffix mat-button (click)="submitReply(-1)">Comment</button>
-        </mat-form-field>
-        <div *ngFor="let commentId of getOrderedCommentIds()">
-            <mat-card [style.marginLeft]="15 * comments[commentId].depth + 'px'" [style.borderColor]="getCommentColor(comments[commentId].depth)" class="comment">
-                <mat-card-header>
-                    <mat-card-subtitle class="user">{{comments[commentId].owner}}</mat-card-subtitle>
-                </mat-card-header>
-                <mat-card-content>
-                    <div>
-                        {{comments[commentId].content}}
-                    </div>
-                </mat-card-content>
-                <mat-card-actions align="end" [style.borderColor]="getCommentColor(comments[commentId].depth)">
-                    <button mat-button [class.button-pressed]="comments[commentId].isVotedByUser" (click)="voteOnComment(commentId)">Vote ({{comments[commentId].voteCount}})</button>
-                    <button mat-button (click)="startReply(commentId)">Reply</button>
-                </mat-card-actions>
-            </mat-card>
-            <mat-form-field class="comment-input" *ngIf="replies.hasOwnProperty(commentId)">
-                <input type="text" [(ngModel)]="replies[commentId]" matInput>
-                <button matSuffix mat-button (click)="cancelReply(commentId)">Cancel</button>
-                <button matSuffix mat-button (click)="submitReply(commentId)">Comment</button>
+        <form>
+            <mat-form-field class="comment" *ngIf="repliesInProgress.hasOwnProperty(-1)">
+                <textarea required maxlength="5000" type="text" [formControl]="repliesInProgress[-1]" matInput></textarea>
+                <mat-error *ngIf="repliesInProgress[-1].hasError('required')">
+                    Comment cannot be empty
+                </mat-error>
+                <mat-error *ngIf="repliesInProgress[-1].hasError('tooLong')">
+                    Max comment length is 5000 characters
+                </mat-error>
+                <button matSuffix mat-button (click)="cancelReply(-1)">Cancel</button>
+                <button matSuffix mat-button (click)="submitReply(-1)">Comment</button>
             </mat-form-field>
-        </div>
+            <div *ngFor="let commentId of getOrderedCommentIds()">
+                <mat-card [style.marginLeft]="15 * comments[commentId].depth + 'px'" [style.borderColor]="getCommentColor(comments[commentId].depth)" class="comment">
+                    <mat-card-header>
+                        <mat-card-subtitle class="user">{{comments[commentId].owner}}</mat-card-subtitle>
+                    </mat-card-header>
+                    <mat-card-content>
+                        <div>{{comments[commentId].content}}</div>
+                    </mat-card-content>
+                    <mat-card-actions align="end" [style.borderColor]="getCommentColor(comments[commentId].depth)">
+                        <button mat-button [class.button-pressed]="comments[commentId].isVotedByUser" (click)="voteOnComment(commentId)">Vote ({{comments[commentId].voteCount}})</button>
+                        <button mat-button (click)="startReply(commentId)">Reply</button>
+                    </mat-card-actions>
+                </mat-card>
+                <mat-form-field class="comment-input" *ngIf="repliesInProgress.hasOwnProperty(commentId)">
+                    <textarea required maxlength="5000" type="text" [formControl]="repliesInProgress[commentId]" matInput></textarea>
+                    <mat-error *ngIf="repliesInProgress[commentId].hasError('required')">
+                        Comment cannot be empty
+                    </mat-error>
+                    <mat-error *ngIf="repliesInProgress[commentId].hasError('tooLong')">
+                        Max comment length is 5000 characters
+                    </mat-error>
+                    <button matSuffix mat-button (click)="cancelReply(commentId)">Cancel</button>
+                    <button matSuffix mat-button (click)="submitReply(commentId)">Comment</button>
+                </mat-form-field>
+            </div>
+        </form>
     </mat-card-content>
 </mat-card>
