--- a/angularapp/src/app/posts/posts.component.html
+++ b/angularapp/src/app/posts/posts.component.html
@@ -12,9 +12,7 @@
             <mat-card-title>{{post.title}}</mat-card-title>
             <mat-card-subtitle>{{post.author}}</mat-card-subtitle>
         </mat-card-header>
-        <mat-card-content>
-            <p>{{post.content}}</p>
-        </mat-card-content>
+        <mat-card-content>{{post.content}}</mat-card-content>
         <mat-card-actions>
             <button mat-button>Comment ({{post.commentCount}})</button>
             <button mat-button [class.button-pressed]="post.isVotedByUser" (click)="voteOnPost($event, post)">Vote ({{post.voteCount}})</button>
