--- a/angularapp/src/app/post/post.component.html
+++ b/angularapp/src/app/post/post.component.html
@@ -13,7 +13,7 @@
     <mat-card-content>
         <form>
             <mat-form-field class="comment" *ngIf="repliesInProgress.hasOwnProperty(-1)">
-                <textarea required maxlength="5000" type="text" [formControl]="repliesInProgress[-1]" matInput></textarea>
+                <textarea maxlength="5000" type="text" [formControl]="repliesInProgress[-1]" matInput></textarea>
                 <mat-error *ngIf="repliesInProgress[-1].hasError('required')">
                     Comment cannot be empty
                 </mat-error>
@@ -28,16 +28,20 @@
                     <mat-card-header>
                         <mat-card-subtitle class="user">{{comments[commentId].owner}}</mat-card-subtitle>
                     </mat-card-header>
-                    <mat-card-content>
-                        <div>{{comments[commentId].content}}</div>
-                    </mat-card-content>
-                    <mat-card-actions align="end" [style.borderColor]="getCommentColor(comments[commentId].depth)">
-                        <button mat-button [class.button-pressed]="comments[commentId].isVotedByUser" (click)="voteOnComment(commentId)">Vote ({{comments[commentId].voteCount}})</button>
-                        <button mat-button (click)="startReply(commentId)">Reply</button>
+                    <mat-card-content #comment>{{comments[commentId].content}}</mat-card-content>
+                    <mat-card-actions [style.borderColor]="getCommentColor(comments[commentId].depth)">
+                        <div>
+                            <button mat-button *ngIf="isCommentShortened(comment)" (click)="expandComment(comment)">Read more</button>
+                            <button mat-button *ngIf="isCommentExpanded(comment)" (click)="shortenComment(comment)">Show less</button>
+                        </div>
+                        <div>
+                            <button mat-button [class.button-pressed]="comments[commentId].isVotedByUser" (click)="voteOnComment(commentId)">Vote ({{comments[commentId].voteCount}})</button>
+                            <button mat-button (click)="startReply(commentId)">Reply</button>
+                        </div>
                     </mat-card-actions>
                 </mat-card>
                 <mat-form-field class="comment-input" *ngIf="repliesInProgress.hasOwnProperty(commentId)">
-                    <textarea required maxlength="5000" type="text" [formControl]="repliesInProgress[commentId]" matInput></textarea>
+                    <textarea maxlength="5000" type="text" [formControl]="repliesInProgress[commentId]" matInput></textarea>
                     <mat-error *ngIf="repliesInProgress[commentId].hasError('required')">
                         Comment cannot be empty
                     </mat-error>
