Added comment deletion

--- a/angularapp/src/app/post/post.component.css
+++ b/angularapp/src/app/post/post.component.css
@@ -37,6 +37,10 @@ mat-card-content, mat-card-title {
 	overflow-wrap: anywhere;
 }
 
+.delete-button {
+	float: right;
+}
+
 .user {
 	/*color: #afb42b;*/
 }
