--- a/angularapp/src/app/signup/signup.component.html
+++ b/angularapp/src/app/signup/signup.component.html
@@ -10,7 +10,7 @@
             <p>
                 <mat-form-field class="example-full-width">
                     <mat-label>Username</mat-label>
-                    <input type="text" formControlName="username" matInput>
+                    <input maxlength="15" type="text" formControlName="username" matInput>
                 </mat-form-field>
             </p>
             <p>
