--- a/angularapp/src/app/posts/posts.component.html
+++ b/angularapp/src/app/posts/posts.component.html
@@ -10,7 +10,7 @@
     <mat-card class="card" *ngFor="let post of posts" [routerLink]="['/post', post.id]">
         <mat-card-header>
             <mat-card-title>{{post.title}}</mat-card-title>
-            <mat-card-subtitle>{{post.author}}</mat-card-subtitle>
+            <mat-card-subtitle>{{post.author}} • {{getTimePassedString(post.createdOn)}}</mat-card-subtitle>
         </mat-card-header>
         <mat-card-content>{{post.content}}</mat-card-content>
         <mat-card-actions>
