Added code snippets and tags

--- a/angularapp/src/app/home/home.component.html
+++ b/angularapp/src/app/home/home.component.html
@@ -15,4 +15,13 @@
             <p></p>
         </mat-card-content>
     </mat-card>
+
+    <mat-card [routerLink]="['/posts']" [queryParams]="{type: 'snippet'}" class="card">
+        <mat-card-header>
+            <mat-card-title>Code Snippets</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <p></p>
+        </mat-card-content>
+    </mat-card>
 </section>
