--- a/angularapp/src/app/new-post/new-post.component.html
+++ b/angularapp/src/app/new-post/new-post.component.html
@@ -1,6 +1,42 @@
-<form>
-    <mat-card>
-        <mat-card-content>
+
+<mat-card>
+    <mat-card-content>
+        <div class="row1">
+            <mat-form-field>
+                <mat-label>Post type</mat-label>
+                <mat-select [formControl]="postTypeFormControl">
+                    <mat-option *ngFor="let postType of postTypes" [value]="postType.value">
+                        {{postType.viewValue}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+            <mat-form-field id="tags">
+                <mat-label>Tags</mat-label>
+                <mat-chip-grid [formControl]="chipFormControl" #chipGrid aria-label="Enter tags">
+                    <mat-chip-row *ngFor="let tag of tags"
+                                  (removed)="removeTag(tag)"
+                                  [editable]="true"
+                                  (edited)="editTag(tag, $event)"
+                                  [aria-description]="'press enter to edit ' + tag">
+                        {{tag}}
+                        <button matChipRemove [attr.aria-label]="'remove ' + tag">
+                            <mat-icon>cancel</mat-icon>
+                        </button>
+                    </mat-chip-row>
+                    <input #tagInput maxlength="30" placeholder="New tag..."
+                           [matChipInputFor]="chipGrid"
+                           (matChipInputTokenEnd)="addTag($event)"
+                           [matAutocomplete]="auto"
+                           [formControl]="tagFormControl" />
+                    <mat-autocomplete #auto="matAutocomplete" (optionSelected)="tagSelected($event)">
+                        <mat-option *ngFor="let tag of filteredOptions | async" [value]="tag">
+                            {{tag}}
+                        </mat-option>
+                    </mat-autocomplete>
+                </mat-chip-grid>
+            </mat-form-field>
+        </div>
+        <form>
             <mat-form-field class="title">
                 <mat-label>Title</mat-label>
                 <input maxlength="150" [formControl]="titleFormControl" matInput>
@@ -12,8 +48,10 @@
                 </mat-error>
             </mat-form-field>
             <mat-form-field class="post">
-                <mat-label>Post</mat-label>
-                <textarea maxlength="40000" [formControl]="contentFormControl" matInput></textarea>
+                <mat-label>Content</mat-label>
+                <textarea maxlength="40000" [formControl]="contentFormControl" matInput
+                          [class.code]="postTypeFormControl.value == 'snippet'"
+                          [spellcheck]="postTypeFormControl.value != 'snippet'"></textarea>
                 <mat-error *ngIf="contentFormControl.hasError('required')">
                     Content is required
                 </mat-error>
@@ -21,10 +59,11 @@
                     Content must be 5 to 40 000 characters long
                 </mat-error>
             </mat-form-field>
-        </mat-card-content>
-        <mat-card-actions align="end">
-            <button mat-button type="button" [routerLink]="['/']">Cancel</button>
-            <button mat-button type="submit" (click)="createNewPost()">Create Post</button>
-        </mat-card-actions>
-    </mat-card>
-</form>
+
+        </form>
+    </mat-card-content>
+    <mat-card-actions align="end">
+        <button mat-button type="button" [routerLink]="['/']">Cancel</button>
+        <button mat-button type="submit" (click)="createNewPost()">Create Post</button>
+    </mat-card-actions>
+</mat-card>
