--- a/angularapp/src/app/posts/posts.component.html
+++ b/angularapp/src/app/posts/posts.component.html
@@ -1,18 +1,39 @@
 <div class="heading">
-    <h1>Discussions</h1>
-    <button mat-raised-button color="accent" [routerLink]="['/new_post']">Start a discussion</button>
+    <h1>{{getPostTypeTitle()}}</h1>
+    <button mat-raised-button color="accent" [routerLink]="['/new_post']" [queryParams]="{ type: postTypeFormControl.value }">Create a new post</button>
 </div>
-<mat-form-field class="search-bar">
-    <input [(ngModel)]="titleSearchFilter" matInput placeholder="Search discussion">
-    <button mat-button matSuffix (click)="filterPosts($event)">Search</button>
-</mat-form-field>
+<div class="search-bar">
+    <mat-form-field>
+        <input [(ngModel)]="titleSearchFilter" matInput placeholder="Search discussion">
+        <button mat-button matSuffix (click)="filterPosts($event)">Search</button>
+    </mat-form-field>
+    <mat-form-field>
+        <mat-label>Post type</mat-label>
+        <mat-select [formControl]="postTypeFormControl">
+            <mat-option *ngFor="let postType of postTypes" [value]="postType.value">
+                {{postType.viewValue}}
+            </mat-option>
+        </mat-select>
+    </mat-form-field>
+</div>
 <div>
     <mat-card class="card" *ngFor="let post of posts" [routerLink]="['/post', post.id]">
         <mat-card-header>
-            <mat-card-title>{{post.title}}</mat-card-title>
-            <mat-card-subtitle>{{post.author}} • {{getTimePassedString(post.createdOn)}}</mat-card-subtitle>
+            <mat-chip-set cdkDropList
+                          cdkDropListOrientation="horizontal">
+                <mat-chip cdkDrag *ngFor="let tag of post.tags">
+                    {{tag}}
+                </mat-chip>
+            </mat-chip-set>
         </mat-card-header>
-        <mat-card-content>{{post.content}}</mat-card-content>
+        <mat-card-header>
+            <mat-card-title>{{post.title}}</mat-card-title>
+            <mat-card-subtitle>{{post.author}} • {{dateHelperService.getTimePassedString(post.createdOn, timeOnPageLoad)}}</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content *ngIf="postTypeFormControl.value == 'discussion'">{{post.content}}</mat-card-content>
+        <mat-card-content *ngIf="postTypeFormControl.value == 'snippet'">
+            <code appClickStopPropagation (click)="openCopySnackBar()" [cdkCopyToClipboard]="post.content" cli><mat-icon>content_copy</mat-icon>{{post.content}}</code>
+        </mat-card-content>
         <mat-card-actions>
             <button mat-button>Comment ({{post.commentCount}})</button>
             <button mat-button [class.button-pressed]="post.isVotedByUser" (click)="voteOnPost($event, post)">Vote ({{post.voteCount}})</button>
