--- a/angularapp/src/app/posts/posts.component.css
+++ b/angularapp/src/app/posts/posts.component.css
@@ -51,3 +51,11 @@ code {
 code mat-icon {
 	float: right;
 }
+
+mat-card-title {
+	font-size: x-large;
+}
+
+mat-card-content {
+	margin-top: 20px;
+}
