--- a/angularapp/src/app/comment-section/comment-section.component.html
+++ b/angularapp/src/app/comment-section/comment-section.component.html
@@ -21,7 +21,7 @@
                     </button>
                     <mat-card-header>
                         <mat-card-subtitle class="user"
-                            >{{comments[commentId].owner}} • {{dateHelperService.getTimePassedString(comments[commentId].createdOn, timeOnPageLoad)}}
+                            >{{getFormattedAuthor(comments[commentId].owner)}} • {{dateHelperService.getTimePassedString(comments[commentId].createdOn, timeOnPageLoad)}}
                         </mat-card-subtitle>
                     </mat-card-header>
                     <mat-card-content #comment>{{comments[commentId].content}}</mat-card-content>
